use colors for queue type instead of device

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script>
 			let line_styles = new Map([
 				// ["device", { attr: "stroke", values: ["red", "green", "blue"]}],
-				["device", { attr: "stroke", values: ["#8DD3C7", "#BEBADA", "#FB8072", "#80B1D3", "#FDB462", "#B3DE69", "#FCCDE5", "#D9D9D9", "#BC80BD", "#CCEBC5", "#FFED6F"]}],
+				["queue_type", { attr: "stroke", values: ["#8DD3C7", "#BEBADA", "#FB8072", "#80B1D3", "#FDB462", "#B3DE69", "#FCCDE5", "#D9D9D9", "#BC80BD", "#CCEBC5", "#FFED6F"]}],
 				["workload_size", { attr: "stroke-dasharray", values: [null, "12", "9 5 5 5"]}],
 				["queue_size", { attr: "stroke-width", values: [1.5, 2.25, 3.0]}]
 			]);
