add benchmark data export for queue operation timings

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 				plot = new Plot(svg, { top: 8, right: 48, bottom: 48, left: 48});
 
-				const line_map = plot.add_lines(data);
+				const line_map = plot.add_lines(kernel_run_time);
 
 
 				const line_style_map = new Map();
