add export for full queue operation benchmark data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="application/javascript" src="plot_data/kernel_run_time.js"></script>
 		<script type="application/javascript" src="plot_data/enqueue_time.js"></script>
 		<script type="application/javascript" src="plot_data/dequeue_time.js"></script>
+		<script type="application/javascript" src="plot_data/queue_op_stats.js"></script>
 		<script>
 			let line_styles = new Map([
 				// ["device", { attr: "stroke", values: ["red", "green", "blue"]}],
